create, read, update, delete professor

--- a/templates/professor/cadastro_professor.html
+++ b/templates/professor/cadastro_professor.html
@@ -98,10 +98,10 @@
         telefone.focus()
     };
 
-    // for (var option of lista.options) {
-    // //document.getElementById("container").append(option.value + ' ');
-    //     console.log(option.value)
-    // }
+    for (var option of lista.options) {
+    //document.getElementById("container").append(option.value + ' ');
+        console.log(option.value)
+    }
 
 </script>
 {% endblock content %}
