--- a/templates/usuario/edita_usuario.html
+++ b/templates/usuario/edita_usuario.html
@@ -16,7 +16,7 @@
 <div class="col-sm-12">
     <div class="card">
         <div class="card-body">
-            <form action="." method="POST">
+            <form action="" method="POST">
                 {% csrf_token %}
 
                 {% crispy form %}
