--- a/templates/aluno/lista_aluno.html
+++ b/templates/aluno/lista_aluno.html
@@ -5,7 +5,17 @@
 <div class="col-sm-12">
     <div class="card">
         <div class="card-header">
-            <h5 class="text-uppercase">{{ titulo }}</h5>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h5 class="text-uppercase">{{ titulo }}</h5>
+                </div>
+                <div class="col-sm-6">
+                    <a class="btn btn-success has-ripple float-right" href="{% url 'cadastro_aluno' %}">
+                        Novo Aluno
+                        <i class="feather icon-user-plus"></i>
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="card-body">
             
@@ -22,14 +32,28 @@
                     <thead>
                         <tr>
                             <th>Nome</th>
-                            <th>Sobrenome</th>
+                            <!-- <th>tipo de usuário</th> -->
+                            <th></th>
+                            <th></th>
                         </tr>
                     </thead>
                     {% for aluno in query_aluno %}
                     <tbody>
                         <tr>
-                            <td>{{aluno.nome}}</td>
-                            <td>{{aluno.sobrenome}}</td>
+                            <td>{{aluno.nome}} {{aluno.sobrenome}}</td>
+                            
+                            <td></td>
+                            <td class="text-rigth" style="width: 6rem">
+                                <a class="btn btn-icon btn-warning has-ripple mr-2" href="{% url 'detail_aluno' aluno.id %}">
+                                    <i class="feather icon-file-text"></i>
+                                </a>
+                                <a class="btn btn-icon btn-success has-ripple mr-2" href="{% url 'edita_aluno' aluno.id %}">
+                                    <i class="feather icon-edit-2"></i>
+                                </a>
+                                <a class="btn btn-icon btn-danger has-ripple" href="{% url 'remove_aluno' aluno.id %}">
+                                    <i class="feather icon-delete"></i>
+                                </a>
+                            </td>
                         </tr>
                     </tbody>
                     {% endfor %}
