--- a/templates/componentes/header_base.html
+++ b/templates/componentes/header_base.html
@@ -9,7 +9,7 @@
         <a class="mobile-menu" id="mobile-collapse" href="#!"><span></span></a>
         <a href="#!" class="b-brand">
             <!-- ========   change your logo hear   ============ -->
-            <img src="{% static 'assets/images/logo.png' %}" alt="" class="logo">
+            <h5 class="text-white">Escola</h5><br>
             <img src="{% static 'assets/images/logo-icon.png' %}" alt="" class="logo-thumb">
         </a>
         <a href="#!" class="mob-toggler">
