--- a/templates/professor/edita_professor.html
+++ b/templates/professor/edita_professor.html
@@ -16,7 +16,7 @@
 <div class="col-sm-12">
     <div class="card">
         <div class="card-body">
-            <form action="." method="POST">
+            <form action="" method="POST">
                 {% csrf_token %}
 
                 {% crispy form %}
@@ -24,4 +24,7 @@
         </div>
     </div>
 </div>
+
+<script src="{% static 'assets/js/adicionar_telefone.js' %}"></script>
+
 {% endblock content %}
