--- a/templates/componentes/menu.html
+++ b/templates/componentes/menu.html
@@ -10,12 +10,12 @@
                 <div class="main-menu-header mb-3">
                     <img class="img-radius" src="{% static 'assets/images/user/avatar-2.jpg' %}" alt="User-Profile-Image">
                     <div class="user-details">
-                        <div id="more-details"></p> <i class="fa fa-caret-down"></i></div>
+                        <div id="more-details"><i class="fa fa-caret-down mr-2"></i></div>
                     </div>
                 </div>
                 <div class="collapse" id="nav-user-link">
                     <ul class="list-unstyled">
-                        <li class="list-group-item"><a href="auth-normal-sign-in.html"><i class="feather icon-log-out m-r-5"></i>Logout</a></li>
+                        <li class="list-group-item"><a href="{% url 'user_logout' %}"><i class="feather icon-log-out m-r-5"></i>Logout</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">{{teste_opc}}</span></a>
+                    <a href="index.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext"></span></a>
                 </li>
                 
 
