--- a/templates/usuario/cadastro_usuario.html
+++ b/templates/usuario/cadastro_usuario.html
@@ -34,10 +34,11 @@
 <div class="col-sm-12">
     <div class="card">
         <div class="card-body">
-            <form action="." method="POST">
+            <form action="{% url 'create_user' %}" method="POST">
                 {% csrf_token %}
 
                 {% crispy form %}
+
             </form>
         </div>
     </div>
