permissões de usuário config, correção bugs, tabelas criadas para gerênciar menu e acessos de usuários

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,11 +22,11 @@
 </head>
 <body class="">
 	<!-- [ Pre-loader ] start -->
-	<div class="loader-bg">
+	<!-- <div class="loader-bg">
 		<div class="loader-track">
 			<div class="loader-fill"></div>
 		</div>
-	</div>
+	</div> -->
 	<!-- [ Pre-loader ] End -->
 
 	<!-- [ navigation menu ] start -->
@@ -47,7 +47,7 @@
         <div class="page-header">
             <div class="page-block">
                 <div class="row align-items-center">
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <div class="page-header-title">
                             <h5 class="m-b-10">Dashboard Analytics</h5>
                         </div>
@@ -55,7 +55,7 @@
                             <li class="breadcrumb-item"><a href="index.html"><i class="feather icon-home"></i></a></li>
                             <li class="breadcrumb-item"><a href="#!">Dashboard Analytics</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
