--- a/templates/componentes/menu.html
+++ b/templates/componentes/menu.html
@@ -44,6 +44,10 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Curso</span></a>
                 </li>
+
+                <li class="nav-item">
+                    <a href="{% url 'cadastro_usuario' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Cadastro Usuário</span></a>
+                </li>
                 
 
             </ul>
