--- a/templates/aluno/lista_aluno.html
+++ b/templates/aluno/lista_aluno.html
@@ -9,12 +9,14 @@
                 <div class="col-sm-6">
                     <h5 class="text-uppercase">{{ titulo }}</h5>
                 </div>
-                <div class="col-sm-6">
-                    <a class="btn btn-success has-ripple float-right" href="{% url 'cadastro_aluno' %}">
-                        Novo Aluno
-                        <i class="feather icon-user-plus"></i>
-                    </a>
-                </div>
+                {% if query_user_staff.is_staff %}
+                    <div class="col-sm-6">
+                        <a class="btn btn-success has-ripple float-right" href="{% url 'cadastro_aluno' %}">
+                            Novo Aluno
+                            <i class="feather icon-user-plus"></i>
+                        </a>
+                    </div>
+                {% endif %}
             </div>
         </div>
         <div class="card-body">
@@ -37,12 +39,13 @@
                             <th></th>
                         </tr>
                     </thead>
-                    {% for aluno in query_aluno %}
+                    {% for aluno in page_obj %}
                     <tbody>
                         <tr>
                             <td>{{aluno.nome}} {{aluno.sobrenome}}</td>
                             
                             <td></td>
+                            {% if query_user_staff.is_staff %}
                             <td class="text-rigth" style="width: 6rem">
                                 <a class="btn btn-icon btn-warning has-ripple mr-2" href="{% url 'detail_aluno' aluno.id %}">
                                     <i class="feather icon-file-text"></i>
@@ -54,10 +57,12 @@
                                     <i class="feather icon-delete"></i>
                                 </a>
                             </td>
+                            {% endif %}
                         </tr>
                     </tbody>
                     {% endfor %}
                 </table>
+                {% include 'componentes/paginacao.html' %}
             </div>
         </div>
     </div>
