--- a/templates/usuario/cadastro_usuario.html
+++ b/templates/usuario/cadastro_usuario.html
@@ -34,7 +34,7 @@
 <div class="col-sm-12">
     <div class="card">
         <div class="card-body">
-            <form action="{% url 'create_user' %}" method="POST">
+            <form action="{% url 'cadastro_usuario' %}" method="POST">
                 {% csrf_token %}
 
                 {% crispy form %}
