menu e permissões menu sendo parametrizados e definidos para controle de acesso

--- a/templates/aluno/cadastro_aluno.html
+++ b/templates/aluno/cadastro_aluno.html
@@ -25,7 +25,14 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
-
+            
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
     
         </div>
     </div>
