--- a/templates/menu/lista_menu.html
+++ b/templates/menu/lista_menu.html
@@ -9,12 +9,21 @@
                 <div class="col-sm-6">
                     <h5 class="text-uppercase">{{ titulo }}</h5>
                 </div>
-                {% if query_user_staff.is_staff %}
+                {% if query_superuser.is_superuser %}
                     <div class="col-sm-6">
-                        <a class="btn btn-success has-ripple float-right" href="{% url 'cadastro_professor' %}">
-                            Novo Professor
-                            <i class="feather icon-user-plus"></i>
-                        </a>
+
+                        <div class="row float-right">
+
+                            <a class="btn btn-info has-ripple mr-3" href="{% url 'cadastro_menu_associar' %}">
+                                Associar Menu ao usuário
+                                <i class="feather icon-menu"></i>
+                            </a>
+
+                            <a class="btn btn-success has-ripple float-right" href="{% url 'cadastro_menu' %}">
+                                Cadastrar Menu
+                                <i class="feather icon-user-plus"></i>
+                            </a>
+                        </div>
                     </div>
                 {% endif %}
             </div>
@@ -39,27 +48,27 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th>Nome</th>
+                            <th>Nome da Opcão no menu</th>
                             <!-- <th>tipo de usuário</th> -->
                             <th></th>
                             <th></th>
                         </tr>
                     </thead>
-                    {% for professor in page_obj %}
+                    {% for menu in page_obj %}
                     <tbody>
                         <tr>
-                            <td>{{professor.nome}} {{professor.sobrenome}}</td>
+                            <td>{{menu.nome_menu}}</td>
                             
                             <td></td>
-                            {% if query_user_staff.is_staff %}
+                            {% if query_superuser.is_superuser %}
                                 <td class="text-rigth" style="width: 6rem">
-                                    <a class="btn btn-icon btn-warning has-ripple mr-2" href="{% url 'detail_professor' professor.id %}">
+                                    <a class="btn btn-icon btn-warning has-ripple mr-2" href="{% url 'detail_menu' menu.id %}">
                                         <i class="feather icon-file-text"></i>
                                     </a>
-                                    <a class="btn btn-icon btn-success has-ripple mr-2" href="{% url 'edita_professor' professor.id %}">
+                                    <a class="btn btn-icon btn-success has-ripple mr-2" href="{% url 'edita_menu' menu.id %}">
                                         <i class="feather icon-edit-2"></i>
                                     </a>
-                                    <a class="btn btn-icon btn-danger has-ripple" href="{% url 'remove_professor' professor.id %}">
+                                    <a class="btn btn-icon btn-danger has-ripple" href="{% url 'remove_menu' menu.id %}">
                                         <i class="feather icon-delete"></i>
                                     </a>
                                 </td>
