--- a/templates/usuario/lista_usuario.html
+++ b/templates/usuario/lista_usuario.html
@@ -18,7 +18,13 @@
             </div>
         </div>
         <div class="card-body">
-            
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
 </div>
