--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,7 @@
     <script src="{% static 'assets/js/pcoded.min.js' %}"></script>
 
     <script src="{% static 'assets/js/usuario_logado.js' %}"></script>
+    <script src="{% static 'assets/js/menu_usuario.js' %}"></script>
 
 <!-- Apex Chart -->
 <script src="{% static 'assets/js/plugins/apexcharts.min.js' %}"></script>
