--- a/templates/componentes/menu.html
+++ b/templates/componentes/menu.html
@@ -10,7 +10,7 @@
                 <div class="main-menu-header mb-3">
                     <img class="img-radius" src="{% static 'assets/images/user/avatar-2.jpg' %}" alt="User-Profile-Image">
                     <div class="user-details">
-                        <div id="more-details"><i class="fa fa-caret-down mr-2"></i></div>
+                        <div id="more-details">{{user.username}}<i class="fa fa-caret-down mr-2"></i></div>
                     </div>
                 </div>
                 <div class="collapse" id="nav-user-link">
