url api mennu ajustado no js

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="">
     <meta name="author" content="Phoenixcoded" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <!-- Favicon icon -->
     <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon">
 
